[package]
name = "doge-hack"
version = "0.0.3"
edition = "2021"

[dependencies]
bitcoin = "0.32"
hex = "0.4"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
